--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.22.1",
+    "tailwindcss": "^4.1.4"
   },
   "browserslist": [
     "last 2 versions"
