--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "author": "Kaushal Kishore",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "parcel": "^2.14.4",
     "process": "^0.11.10"
   },
