--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "This is my first time using",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url ./",
+    "start": "npm run dev",
     "test": "jest",
     "watch-test": "jest --watch"
   },
