--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is my first time using",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./",
+    "build": "parcel build src/index.html --public-url ./ --dist-dir dist",
     "start": "npm run dev",
     "vercel-build": "npm run build"
   },
