--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "This is my first time using",
+  "source": "src/index.html",
   "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url ./ --dist-dir dist",
-    "start": "npm run dev",
-    "vercel-build": "npm run build"
+    "test": "jest"
   },
   "author": "Kaushal Kishore",
   "license": "ISC",
