--- a/.parcelrc
+++ b/.parcelrc
@@ -1,9 +1,12 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{js,mjs,jsx,cjs,ts,tsx}": [
-      "@parcel/transformer-js",
-      "@parcel/transformer-react-refresh-wrap"
-    ]
+    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/transformer-js"]
+  },
+  "optimizers": {
+    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/optimizer-terser"]
+  },
+  "packagers": {
+    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/packager-js"]
   }
 }
