--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "set NODE_ENV=production&& parcel build src/index.html",
     "dev": "parcel src/index.html",
     "test": "jest"
   },
