--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@parcel/optimizer-terser": "^2.15.2",
+    "@parcel/packager-js": "^2.15.2",
+    "@parcel/transformer-js": "^2.15.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
