--- a/.parcelrc
+++ b/.parcelrc
@@ -1,12 +1,3 @@
 {
-  "extends": "@parcel/config-default",
-  "transformers": {
-    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/transformer-js"]
-  },
-  "optimizers": {
-    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/optimizer-terser"]
-  },
-  "packagers": {
-    "*.{js,mjs,jsx,cjs,ts,tsx}": "@parcel/packager-js"
-  }
+  "extends": "@parcel/config-default"
 }
