--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "set NODE_ENV=production&& parcel build src/index.html",
+    "build": "set NODE_ENV=production&& parcel build src/index.html --no-source-maps",
     "dev": "parcel src/index.html",
     "test": "jest"
   },
@@ -21,9 +21,6 @@
     "process": "^0.11.10"
   },
   "dependencies": {
-    "@babel/core": "^7.27.1",
-    "@babel/preset-env": "^7.27.2",
-    "@babel/preset-react": "^7.27.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.10.0",
