--- a/.parcelrc
+++ b/.parcelrc
@@ -1,3 +1,18 @@
 {
-  "extends": "@parcel/config-default"
+  "extends": "@parcel/config-default",
+  "transformers": {
+    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/transformer-js", "..."],
+    "*.{css,pcss}": ["@parcel/transformer-css", "..."],
+    "*.{html,htm}": ["@parcel/transformer-html", "..."]
+  },
+  "optimizers": {
+    "*.{js,mjs,jsx,cjs,ts,tsx}": ["@parcel/optimizer-terser", "..."],
+    "*.{css,pcss}": ["@parcel/optimizer-css", "..."],
+    "*.{html,htm}": ["@parcel/optimizer-htmlnano", "..."]
+  },
+  "packagers": {
+    "*.{js,mjs,jsx,cjs,ts,tsx}": "@parcel/packager-js",
+    "*.{css,pcss}": "@parcel/packager-css",
+    "*.{html,htm}": "@parcel/packager-html"
+  }
 }
