--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "set NODE_ENV=production&& parcel build src/index.html --no-source-maps",
+    "build": "set NODE_ENV=production&& set DISABLE_REACT_REFRESH=true&& set PARCEL_BUILD_ENV=production&& parcel build src/index.html --no-source-maps --no-optimize",
     "dev": "parcel src/index.html",
     "test": "jest"
   },
