--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Kaushal Kishore",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-postcss": "^2.14.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
