--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "postcss": "^8.4.31",
-    "process": "^0.11.10"
+    "postcss-import": "^15.1.0",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
-    "autoprefixer": "^10.4.16",
     "axios": "^1.10.0",
     "parcel": "^2.14.4",
-    "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.22.1",
-    "tailwindcss": "^3.3.5"
+    "react-router-dom": "^6.22.1"
   },
   "browserslist": [
     "last 2 versions"
