--- a/package.json
+++ b/package.json
@@ -2,33 +2,26 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "This is my first time using",
-  "source": "src/index.html",
+  "type": "module",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "NODE_ENV=production parcel build src/index.html",
-    "dev": "parcel src/index.html",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "Kaushal Kishore",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-postcss": "^2.14.4",
-    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
     "postcss": "^8.4.31",
-    "postcss-import": "^15.1.0",
-    "process": "^0.11.10",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.10.0",
-    "parcel": "^2.14.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
